--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;                           
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
